--- a/Kafka-example/src/main/resources/application.yml
+++ b/Kafka-example/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
       enable-auto-commit: false # 使用 Spring-Kafka 的消费进度的提交机制
       max-poll-records: 10
-#    listener:
+    listener:
       ack-mode: manual_immediate # 手动提交的模式
     bootstrap-servers: localhost:29092
     producer:
@@ -14,5 +14,12 @@ spring:
       retries: 3 # 发送失败时，重试发送的次数
       key-serializer: org.apache.kafka.common.serialization.StringSerializer # 消息的 key 的序列化
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer # 消息的 value 的序列化
+      properties:
+        max:
+          block:
+            ms: 60000 # 默认值，发送消息时，如果消息队列的缓冲区满了，等待的时间
+    retry:
+      topic:
+        delay:
 server:
   port: 8081
